[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/label_HP.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/label_EP.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_bottom = 3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 47.5174 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 640.222, 581.291, 700.382 ]
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 97.0

[node name="P1Bars" type="VBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_right = 500.0
margin_bottom = 97.0
size_flags_horizontal = 3

[node name="LifeBar" type="HBoxContainer" parent="HBoxContainer/P1Bars"]
margin_right = 500.0
margin_bottom = 53.0

[node name="Count" type="MarginContainer" parent="HBoxContainer/P1Bars/LifeBar"]
margin_right = 100.0
margin_bottom = 53.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/P1Bars/LifeBar/Count"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )

[node name="Title" type="TextureRect" parent="HBoxContainer/P1Bars/LifeBar/Count/Background"]
margin_left = 4.0032
margin_top = 4.84498
margin_right = 54.0032
margin_bottom = 44.845
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="HBoxContainer/P1Bars/LifeBar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.6594
margin_top = 7.52933
margin_right = -8.34057
margin_bottom = -6.47067
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/P1Bars/LifeBar"]
margin_left = 104.0
margin_right = 500.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="EnergyBar" type="HBoxContainer" parent="HBoxContainer/P1Bars"]
margin_top = 57.0
margin_right = 500.0
margin_bottom = 97.0

[node name="Count" type="MarginContainer" parent="HBoxContainer/P1Bars/EnergyBar"]
margin_right = 100.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/P1Bars/EnergyBar/Count"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )

[node name="Title" type="TextureRect" parent="HBoxContainer/P1Bars/EnergyBar/Count/Background"]
margin_left = 4.0032
margin_top = 0.84499
margin_right = 54.0032
margin_bottom = 40.845
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="HBoxContainer/P1Bars/EnergyBar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.6594
margin_top = 6.52933
margin_right = -8.34057
margin_bottom = -2.47067
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/P1Bars/EnergyBar"]
margin_left = 104.0
margin_right = 352.0
margin_bottom = 40.0
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 504.0
margin_right = 776.0
margin_bottom = 97.0
size_flags_horizontal = 7
alignment = 1

[node name="Placar" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 136.0
margin_bottom = 97.0

[node name="Exibir" type="NinePatchRect" parent="HBoxContainer/HBoxContainer/Placar"]
margin_bottom = 97.0
texture = ExtResource( 2 )

[node name="Number1" type="Label" parent="HBoxContainer/HBoxContainer/Placar/Exibir"]
margin_left = -88.2296
margin_top = 26.2277
margin_right = -23.2296
margin_bottom = 54.2277
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desenho" type="TextureRect" parent="HBoxContainer/HBoxContainer/Placar/Exibir"]
margin_left = -36.186
margin_top = 14.216
margin_right = 3.81396
margin_bottom = 54.216
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number2" type="Label" parent="HBoxContainer/HBoxContainer/Placar/Exibir"]
margin_left = 8.0
margin_top = 24.7723
margin_right = 74.0
margin_bottom = 83.7723
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 780.0
margin_right = 1280.0
margin_bottom = 97.0

[node name="LifeBar" type="HBoxContainer" parent="HBoxContainer/P2Bars"]
margin_right = 500.0
margin_bottom = 53.0
alignment = 2

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/P2Bars/LifeBar"]
margin_right = 396.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="Count" type="MarginContainer" parent="HBoxContainer/P2Bars/LifeBar"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 53.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/P2Bars/LifeBar/Count"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )

[node name="Title" type="TextureRect" parent="HBoxContainer/P2Bars/LifeBar/Count/Background"]
margin_left = 4.0032
margin_top = 5.84499
margin_right = 54.0032
margin_bottom = 45.845
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="HBoxContainer/P2Bars/LifeBar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.6594
margin_top = 7.52933
margin_right = -8.34057
margin_bottom = -6.47067
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBar" type="HBoxContainer" parent="HBoxContainer/P2Bars"]
margin_top = 57.0
margin_right = 500.0
margin_bottom = 97.0
alignment = 2

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/P2Bars/EnergyBar"]
margin_left = 148.0
margin_right = 396.0
margin_bottom = 40.0
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="Count" type="MarginContainer" parent="HBoxContainer/P2Bars/EnergyBar"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/P2Bars/EnergyBar/Count"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )

[node name="Title" type="TextureRect" parent="HBoxContainer/P2Bars/EnergyBar/Count/Background"]
margin_left = 4.0032
margin_top = 0.84499
margin_right = 54.0032
margin_bottom = 40.845
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="HBoxContainer/P2Bars/EnergyBar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.6594
margin_top = 6.52933
margin_right = -8.34057
margin_bottom = -2.47067
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
